--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>io.sudheer.devops.web</groupId>
 	<artifactId>devops-web</artifactId>
 	<version>1.0</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>devops-web-maven</name>
 	<description>Demo project for Spring Boot</description>
