--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
+		<!-- CloudFoundry --> 
+		<dependency>
+		        <groupId>org.springframework.cloud</groupId>
+		        <artifactId>spring-cloud-cloudfoundry-connector</artifactId>
+		        <version>${spring-cloud.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+		        <artifactId>spring-cloud-spring-service-connector</artifactId>
+		        <version>${spring-cloud.version}</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
