--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.sudheer.devops.web</groupId>
-	<artifactId>devops-web</artifactId>
+	<artifactId>devops-web-maven</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 
