--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.9</version>
                 <configuration>
                     <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                 </configuration>
@@ -76,10 +77,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
                 <configuration>
                     <formats>
                         <format>html</format>
                     </formats>
+                    <check/>
                 </configuration>
             </plugin>
         </plugins>
