--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 		</profile>
 	</profiles>
 
-    <!--<reporting>
+    <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -112,7 +112,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </reporting>-->
+    </reporting>
 
 
 </project>
