print only tommee process id

--- a/configuration_scripts/server-restart.yml
+++ b/configuration_scripts/server-restart.yml
@@ -13,7 +13,7 @@
 
     - name: debug info is printed
       debug:
-        var: tommee_pid
+        var: tommee_pid.stdout
         verbosity: 2
       tags: printDebugInfo
 
