--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<jacoco.version>0.7.5.201505241946</jacoco.version>
+		<!-- <cobertura.version>2.7</cobertura.version> -->
+		<junit.version>4.7</junit.version>
+		<findbugs.version>3.0.5</findbugs.version>
 	</properties>
 
 	<dependencies>
@@ -52,6 +55,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 		
 	</dependencies>
 
@@ -61,6 +71,38 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<parallel>methods</parallel>
+					<threadCount>10</threadCount>
+					<includes>
+						<include>**/Test*.java</include>
+						<include>**/Test.java</include>
+						<include>**/TestCase.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/*Abstract*Test.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -118,13 +160,141 @@
 							<failurePriority>2</failurePriority>
 						</configuration>
 					</plugin>
+
+					<!-- FINDBUGS -->
+					<plugin>
+						<artifactId>findbugs-maven-plugin</artifactId>
+						<version>${findbugs.version}</version>
+						<configuration>
+							<effort>Max</effort>
+							<xmlOutput>true</xmlOutput>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>maven3</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-enforcer-plugin</artifactId>
+						<version>1.0</version>
+						<executions>
+							<execution>
+								<id>enforce-versions</id>
+								<goals>
+									<goal>enforce</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<requireMavenVersion>
+											<version>[3.0,)</version>
+										</requireMavenVersion>
+									</rules>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-site-plugin</artifactId>
+						<version>3.3</version>
+						<configuration>
+							<reportPlugins>
+								<plugin>
+									<artifactId>maven-project-info-reports-plugin</artifactId>
+									<version>2.7</version>
+								</plugin>
+								<plugin>
+									<groupId>org.jacoco</groupId>
+									<artifactId>jacoco-maven-plugin</artifactId>
+									<version>${jacoco.version}</version>
+								</plugin>
+								<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-checkstyle-plugin</artifactId>
+									<version>3.0.1</version>
+									<!--<configuration>-->
+									<!--<configLocation>gol-checkstyle.xml</configLocation>-->
+									<!--</configuration>-->
+								</plugin>
+								<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-pmd-plugin</artifactId>
+									<version>3.2</version>
+									<configuration>
+										<targetJdk>1.8</targetJdk>
+										<aggregate>true</aggregate>
+										<format>xml</format>
+										<rulesets>
+											<ruleset>/pmd-rules.xml</ruleset>
+										</rulesets>
+										<!-- CPD options -->
+										<minimumTokens>20</minimumTokens>
+										<ignoreIdentifiers>true</ignoreIdentifiers>
+									</configuration>
+								</plugin>
+								<plugin>
+									<groupId>org.codehaus.mojo</groupId>
+									<artifactId>findbugs-maven-plugin</artifactId>
+									<version>2.4.0</version>
+									<configuration>
+										<effort>Max</effort>
+										<xmlOutput>true</xmlOutput>
+									</configuration>
+								</plugin>
+								<plugin>
+									<artifactId>maven-javadoc-plugin</artifactId>
+									<version>2.9.1</version>
+									<configuration>
+										<source>1.8</source>
+										<doclet>
+											gr.spinellis.umlgraph.doclet.UmlGraphDoc
+										</doclet>
+										<docletArtifact>
+											<groupId>gr.spinellis</groupId>
+											<artifactId>UmlGraph</artifactId>
+											<version>4.6</version>
+										</docletArtifact>
+										<additionalparam>
+											-inferrel -inferdep -hide java.* -collpackages
+											java.util.* -attributes -operations
+											-enumerations -enumconstants
+										</additionalparam>
+									</configuration>
+								</plugin>
+								<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-jxr-plugin</artifactId>
+									<version>2.4</version>
+								</plugin>
+							</reportPlugins>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>io.sudheer.devops.web</groupId>
+								<artifactId>devops-web-maven</artifactId>
+								<version>1.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
 	</profiles>
 
-    <reporting>
-        <plugins>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.19.1</version>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -134,10 +304,11 @@
                 </configuration>
             </plugin>
 
+            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
+				<version>${cobertura.version}</version>
                 <configuration>
                     <formats>
                         <format>xml</format>
@@ -145,6 +316,8 @@
                     <check/>
                 </configuration>
             </plugin>
+            -->
+
         </plugins>
     </reporting>
 
