Standardized - yet to test

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			</plugin>
 
 			<plugin>
+		        <groupId>org.codehaus.mojo</groupId>
+		    	<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs.version}</version>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.2</version>
@@ -297,6 +303,15 @@
                     <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
                 </configuration>
             </plugin>
+			<!-- FINDBUGS -->
+			<plugin>
+				<artifactId>findbugs-maven-plugin</artifactId>
+				<version>${findbugs.version}</version>
+				<configuration>
+					<effort>Max</effort>
+					<xmlOutput>true</xmlOutput>
+				</configuration>
+			</plugin>
         </plugins>
     </reporting>
 
