--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,7 @@
             </plugin>
 			<!-- FINDBUGS -->
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>${findbugs.version}</version>
 				<configuration>
