--- a/pom.xml
+++ b/pom.xml
@@ -64,11 +64,12 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/findbugs-maven-plugin -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.codehaus.mojo</groupId>
 			<artifactId>findbugs-maven-plugin</artifactId>
 			<version>${findbugs.version}</version>
 		</dependency>
+		-->
 		
 	</dependencies>
 
@@ -79,11 +80,12 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
+			<!--
 			<plugin>
 		        <groupId>org.codehaus.mojo</groupId>
 		    	<artifactId>findbugs-maven-plugin</artifactId>
 				<version>${findbugs.version}</version>
-			</plugin>
+			</plugin> -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -239,6 +241,7 @@
 										<ignoreIdentifiers>true</ignoreIdentifiers>
 									</configuration>
 								</plugin>
+								<!--
 								<plugin>
 									<groupId>org.codehaus.mojo</groupId>
 									<artifactId>findbugs-maven-plugin</artifactId>
@@ -247,7 +250,7 @@
 										<effort>Max</effort>
 										<xmlOutput>true</xmlOutput>
 									</configuration>
-								</plugin>
+								</plugin> -->
 								<plugin>
 									<artifactId>maven-javadoc-plugin</artifactId>
 									<version>2.9.1</version>
@@ -273,8 +276,8 @@
 									<artifactId>maven-jxr-plugin</artifactId>
 									<version>2.4</version>
 								</plugin>
-							</reportPlugins>
-						</configuration>
+                			</reportPlugins>
+           				</configuration>
 						<dependencies>
 							<dependency>
 								<groupId>io.sudheer.devops.web</groupId>
@@ -295,15 +298,16 @@
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.19.1</version>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.9</version>
-                <configuration>
-                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                </configuration>
-            </plugin>
+				<configuration>
+					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+				</configuration>
+			</plugin>
 			<!-- FINDBUGS -->
+			<!--
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
@@ -312,9 +316,7 @@
 					<effort>Max</effort>
 					<xmlOutput>true</xmlOutput>
 				</configuration>
-			</plugin>
-        </plugins>
-    </reporting>
-
-
+			</plugin> -->
+		</plugins>
+	</reporting>
 </project>
